# realtime-camera

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  jniLibs
app/src/main/assets/: kernels.cl
app/src/main/assets/net/: _index.html
app/src/main/cpp/: CMakeLists.txt  h264encoder.h  helper.h  include  main_jni.cpp  processor.cpp  processor.h
app/src/main/cpp/include/opencv/: cxmisc.h
app/src/main/cpp/include/opencv2/: calib3d.hpp  core.hpp  cvconfig.h  features2d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  opencv.hpp  opencv_modules.hpp  photo.hpp  stitching.hpp  superres.hpp  videoio.hpp
app/src/main/cpp/include/opencv2/calib3d/: calib3d_c.h
app/src/main/cpp/include/opencv2/core/: affine.hpp  base.hpp  bufferpool.hpp  core_c.h  cuda.hpp  cuda_stream_accessor.hpp  cuda_types.hpp  cvdef.h  cvstd.hpp  cvstd.inl.hpp  directx.hpp  eigen.hpp  fast_math.hpp  mat.hpp  mat.inl.hpp  matx.hpp  ocl.hpp  ocl_genbase.hpp  opengl.hpp  operations.hpp  optim.hpp  persistence.hpp  private.cuda.hpp  private.hpp  ptr.inl.hpp  saturate.hpp  traits.hpp  types.hpp  types_c.h  utility.hpp  va_intel.hpp  wimage.hpp
app/src/main/cpp/include/opencv2/core/cuda/: block.hpp  common.hpp  functional.hpp  scan.hpp  transform.hpp  utility.hpp  vec_math.hpp  warp.hpp  warp_shuffle.hpp
app/src/main/cpp/include/opencv2/core/hal/: hal.hpp  interface.h  intrin.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp
app/src/main/cpp/include/opencv2/flann/: allocator.h  any.h  autotuned_index.h  composite_index.h  defines.h  dist.h  dummy.h  dynamic_bitset.h  flann_base.hpp  ground_truth.h  hdf5.h  hierarchical_clustering_index.h  index_testing.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  logger.h  lsh_index.h  lsh_table.h  matrix.h  miniflann.hpp  object_factory.h  params.h  random.h  result_set.h
app/src/main/cpp/include/opencv2/highgui/: highgui_c.h
app/src/main/cpp/include/opencv2/imgcodecs/: imgcodecs_c.h
app/src/main/cpp/include/opencv2/imgproc/: imgproc_c.h  types_c.h
app/src/main/cpp/include/opencv2/imgproc/detail/: distortion_model.hpp
app/src/main/cpp/include/opencv2/imgproc/hal/: hal.hpp
app/src/main/cpp/include/opencv2/objdetect/: detection_based_tracker.hpp  objdetect_c.h
app/src/main/cpp/include/opencv2/shape/: hist_cost.hpp  shape_distance.hpp  shape_transformer.hpp
app/src/main/cpp/include/opencv2/stitching/: warpers.hpp
app/src/main/cpp/include/opencv2/stitching/detail/: autocalib.hpp  blenders.hpp  camera.hpp  exposure_compensate.hpp  matchers.hpp  motion_estimators.hpp  seam_finders.hpp  timelapsers.hpp  util.hpp  warpers.hpp
app/src/main/cpp/include/opencv2/superres/: optical_flow.hpp
app/src/main/cpp/include/opencv2/video/: background_segm.hpp  tracking.hpp
app/src/main/cpp/include/opencv2/videoio/: cap_ios.h  videoio_c.h
app/src/main/cpp/include/opencv2/videostab/: deblurring.hpp  fast_marching.hpp  fast_marching_inl.hpp  frame_source.hpp  global_motion.hpp  inpainting.hpp  log.hpp  motion_stabilizing.hpp  optical_flow.hpp  outlier_rejection.hpp  ring_buffer.hpp  stabilizer.hpp  wobble_suppression.hpp
app/src/main/cpp/x264/android-shared/arm64-v8a/lib/: libx264.so.148
app/src/main/cpp/x264/android-shared/armeabi/lib/: libx264.so.148
app/src/main/java/com/sohamsendev/realtime_camera/Activities/: CameraPreviewFragment.java  ControlPanelFragment.java  MainActivity.java  SettingsFragment.java
app/src/main/java/com/sohamsendev/realtime_camera/Media/: Camera2Service.java  CameraHolder.java  CameraPreview.java  MediaBlock.java  OverlayView.java
app/src/main/java/com/sohamsendev/realtime_camera/Net/: StreamServer.java  (+3 more)
app/src/main/res/drawable/: ic_settings_power_black_24dp.xml
app/src/main/res/layout/: activity_main.xml  fragment_camera_preview.xml  fragment_control_panel.xml  fragment_settings.xml  nav_header.xml
app/src/main/res/menu/: activity_home_drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
(+26 files in other folders)
